operator/pkg/gateway-api/testdata/gateway/listenerset-route-gateway-isolation/input/listenerset-route-gateway-isolation.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: route-gateway-isolation
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
  - name: gateway-http
    hostname: gateway.example.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: delegated-listeners
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: route-gateway-isolation
  listeners:
  - name: echo
    hostname: echo.example.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: delegated-listeners
    sectionName: echo
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
